# Gopher

./: .gitignore  .main.cpp  CMakeLists.txt  LICENSE  README.md  gopher_status_app.py  gopher_video_app.py  out.mov  setup.py
scripts/: build.sh
src/: ffmpeg_receiver.cpp  ffmpeg_receiver.hpp  ffmpeg_sender.cpp  ffmpeg_sender.hpp  frame_compressor.cpp  frame_compressor.h  gopher_client.cpp  gopher_client_lib.cpp  gopher_client_lib.hpp  gopher_client_pybind.cpp  gopherd.cpp  gopherd_helper.hpp  main.cpp  requirements.txt  socket_helper.cpp  socket_helper.h
